version/0.30/_sources/api/solver/_autosummary/settings/major_gridlines.rst.txt
:orphan:

.. _major_gridlines:

major_gridlines
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.major_gridlines
    :show-inheritance:

.. rubric:: Attributes

======================   ================================

Attribute                                         Summary

======================   ================================
:ref:`color <color>`          Color of gridlines on axis.

:ref:`weight <weight>`       Weight of gridlines on axis.

======================   ================================

.. rubric:: Included in:

================   ======================

Parent                            Summary

================   ======================
:ref:`x_1 <x_1>`       X-axis properties.

:ref:`y_1 <y_1>`       Y-axis properties.

================   ======================

